--- a/vortrag.html
+++ b/vortrag.html
@@ -57,17 +57,59 @@
 					<section>
 						<h2>Was ist Code for Germany?</h2>
 					</section>
-					<section>
-						<p>beschreibung</p>
+					<section class="left">
+						<p> <span class="bold">Was ist Code for 
+						Germany?</span><br /> Ein Netzwerk von 
+						Menschen, die sich praktisch mit 
+						öffentlichen Daten und Civic Tech 
+						beschäftigen. </p>
+						<p> <span class="bold">
+						Die Idee dahinter:</span><br /> Gemeinsam 
+						Open Data, Partizipation und staatliche 
+						Transparenz vorantreiben und nützliche 
+						digitale Werkzeuge für Bürger entwickeln. 
+						</p>
+						<p> <span class="bold">Partner:</span> 
+						Gestartet wird das Programm von der Open 
+						Knowledge Foundation Deutschland in 
+						Partnerschaft mit Code for America, Google 
+						und aktiven Teams in ganz DE. </p>
+					</section>
+					<section class="left">
+						<h3>Wie?</h3>
+						<p>Lokale Gruppen in Städten: OK Labs (Open Knowledge Labs)</p>
+						<p>/ <span class="bold">treffen</span> sich regelmäßig um an Anwendungen und Visualisierungen für ihre Stadt zu arbeiten.</p>
+						<p>/ <span class="bold">vernetzen</span> sich deutschlandweit um gemeinsam an Projekten zu arbeiten.</p>
+						<p>/ stellen ihre Projekte bzw. deren Status auf einer gemeinsamen Plattform vor: codefor.de</p>
+						<p>/ bekommen Hilfe von Experten und Unterstützung bei der Öffentlichkeitsarbeit und bei der Arbeit mit der lokalen Verwaltung.</p>
+					</section>
+					<section class="left">
+						<h3>Ziele</h3>
+						<p>/ Gemeinsam mehr Werkzeuge für Bürger entwickeln</p>
+						<p>/ Das Thema Open Data vorantreiben – Mehr Daten öffnen!</p>
+						<p>/ Mehr Sichtbarkeit für spannende lokale Projekte</p>
+						<p>/ Austausch auch auf internationaler Ebene</p>
 					</section>
 				</section>
-
+				<section>
+					<img src="images/karte.png" alt="" title="" style="border:none" />
+				</section>
 				<section>
 					<section>
 						<h2>Das OK-Lab Chemnitz</h2>
 					</section>
-					<section>
-						<p>beschreibung</p>
+					<section class="left">
+						<h3>Entstehung</h3>
+						<p>/ 22. Februar 2014 - Open Data Day</p>
+						<p>/ März - Aufruf zur Gründung von Labs von OKFN</p>
+						<p>/ Regelmäßige Treffen (1 - 2 mal im Monat)</p>
+					</section>
+					<section class="left">
+						<h3>Unsere Ziele</h3>
+						<p>/ Leute finden, die Lust haben mitzumachen</p>
+						<p>/ offene Daten Sammeln</p>
+						<p>/ Projekte gemeinsam umsetzen</p>
+						<p>/ Mehr Daten in Chemnitz öffnen</p>
 					</section>
 				</section>
 
@@ -76,16 +118,25 @@
 						<h2>Projekte Chemnitz</h2>
 					</section>
 					<section>
-						<p>beschreibung</p>
+						<h3>Baustellenkarte</h3>
+						<p>blubb</p>
+					</section>
+					<section>
+						<h3>Maifeuer</h3>
+						<p>blubb</p>
+					</section>
+					<section>
+						<h3>CVAG-Haltestellen</h3>
+						<p>blubb</p>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<h2>Projekte Deutschland</h2>
+						<h2>Coole Projekte in Deutschland</h2>
 					</section>
 					<section>
-						<p>beschreibung</p>
+						<p>Things on Bikelines (Chris Hübsch)</p>
 					</section>
 				</section>
 
