--- a/vortrag.html
+++ b/vortrag.html
@@ -1,4 +1,3 @@
-<html>
 <html lang="de">
 
 	<head>
@@ -44,13 +43,34 @@
 				<section>
 					<h2>Gliederung</h2>
 					<ol class="">
-						<li data-fragment-index="0" class="fragment">Was ist Code for Germany?</li>
-						<li data-fragment-index="1" class="fragment">Das OK-Lab Chemnitz</li>
-						<li data-fragment-index="2" class="fragment">Projekte Chemnitz</li>
-						<li data-fragment-index="3" class="fragment">Projekte Deutschland</li>
-						<li data-fragment-index="4" class="fragment">Offene Daten in Chemnitz?!</li>
-						<li data-fragment-index="5" class="fragment">Die Zukunft</li>
+						<li>Wer sind wir?</li>
+						<li>Was ist Code for Germany?</li>
+						<li>Das OK-Lab Chemnitz</li>
+						<li>Projekte Chemnitz</li>
+						<li>Projekte Deutschland</li>
+						<li>Offene Daten in Chemnitz?!</li>
+						<li>Die Zukunft</li>
 					</ol>
+				</section>
+
+				<section>
+					<section>
+						<h2>Wer sind wir?</h2>
+					</section>
+					<section>
+						<h3>Tobias Gall</h3>
+							Student, Lab Lead, ...
+
+						<br /><br />
+
+						<h3>Morris Jobke</h3>
+							Student &nbsp;&nbsp;&nbsp;
+							Lab Lead &nbsp;&nbsp;&nbsp;
+							Webentwickler (PHP, Python) <br />
+							Open-{Source|Data|...}-Enthusiast
+
+					</section>
+
 				</section>
 
 				<section>
@@ -58,21 +78,21 @@
 						<h2>Was ist Code for Germany?</h2>
 					</section>
 					<section class="left">
-						<p> <span class="bold">Was ist Code for 
-						Germany?</span><br /> Ein Netzwerk von 
-						Menschen, die sich praktisch mit 
-						öffentlichen Daten und Civic Tech 
+						<p> <span class="bold">Was ist Code for
+						Germany?</span><br /> Ein Netzwerk von
+						Menschen, die sich praktisch mit
+						öffentlichen Daten und Civic Tech
 						beschäftigen. </p>
 						<p> <span class="bold">
-						Die Idee dahinter:</span><br /> Gemeinsam 
-						Open Data, Partizipation und staatliche 
-						Transparenz vorantreiben und nützliche 
-						digitale Werkzeuge für Bürger entwickeln. 
+						Die Idee dahinter:</span><br /> Gemeinsam
+						Open Data, Partizipation und staatliche
+						Transparenz vorantreiben und nützliche
+						digitale Werkzeuge für Bürger entwickeln.
 						</p>
-						<p> <span class="bold">Partner:</span> 
-						Gestartet wird das Programm von der Open 
-						Knowledge Foundation Deutschland in 
-						Partnerschaft mit Code for America, Google 
+						<p> <span class="bold">Partner:</span>
+						Gestartet wird das Programm von der Open
+						Knowledge Foundation Deutschland in
+						Partnerschaft mit Code for America, Google
 						und aktiven Teams in ganz DE. </p>
 					</section>
 					<section class="left">
@@ -92,7 +112,7 @@
 					</section>
 				</section>
 				<section>
-					<img src="images/karte.png" alt="" title="" style="border:none" />
+					<img src="images/karte.png" />
 				</section>
 				<section>
 					<section>
@@ -119,15 +139,19 @@
 					</section>
 					<section>
 						<h3>Baustellenkarte</h3>
-						<p>blubb</p>
+						<iframe src="http://codeforchemnitz.de/BaustellenChemnitz/#/expanded=true" style="width:100%;height:87%;"></iframe>
 					</section>
 					<section>
 						<h3>Maifeuer</h3>
-						<p>blubb</p>
+						<img src="images/Maifeuer-Sachsen-Fernsehen.png" /><br />
+						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
+					</section>
+					<section>
+						<img src="images/Feuer.png" />
 					</section>
 					<section>
 						<h3>CVAG-Haltestellen</h3>
-						<p>blubb</p>
+						<iframe src="http://codeforchemnitz.de/Haltestellen/" style="width:100%;height:87%;"></iframe>
 					</section>
 				</section>
 
