--- a/vortrag.html
+++ b/vortrag.html
@@ -127,9 +127,9 @@
 					<section class="left">
 						<h3>Unsere Ziele</h3>
 						<p>/ Leute finden, die Lust haben mitzumachen</p>
-						<p>/ offene Daten Sammeln</p>
-						<p>/ Projekte gemeinsam umsetzen</p>
-						<p>/ Mehr Daten in Chemnitz öffnen</p>
+						<p>/ offene Daten sammeln</p>
+						<p>/ gemeinsam Projekte umsetzen</p>
+						<p>/ mehr Daten in Chemnitz öffnen</p>
 					</section>
 				</section>
 
@@ -158,9 +158,19 @@
 				<section>
 					<section>
 						<h2>Coole Projekte in Deutschland</h2>
+						<a href="http://codefor.de/projekte/">codefor.de/projekte</a>
 					</section>
 					<section>
-						<p>Things on Bikelines (Chris Hübsch)</p>
+						<p>Things on Bikelines</p>
+						<iframe src="http://thingsonbikelanes.tumblr.com/" style="width:100%;height:87%;"></iframe>
+					</section>
+					<section>
+						<p>Barrierefreiheit im ÖPNV (Hamburg)</p>
+						<iframe src="https://dl.dropboxusercontent.com/u/54512470/Accessibility_VIZ/hamburg.html" style="width:100%;height:87%;"></iframe>
+					</section>
+					<section>
+						<p>Historische Entwicklung Berlins</p>
+						<iframe src="http://berlin.codefor.de/entwicklung/" style="width:100%;height:87%;"></iframe>
 					</section>
 				</section>
 
@@ -170,6 +180,11 @@
 					</section>
 					<section>
 						<p>beschreibung</p>
+					</section>
+					<section>
+						<p>Radwege in Chemnitz (Chris Hübsch)</p>
+						<img src="images/Chris-huebsch.png" /><br />
+						<a href="http://www.huebsch-gemacht.de/radwege/gmap/all.php" style="font-size: 15px;">Quelle</a>
 					</section>
 				</section>
 
