--- a/vortrag.html
+++ b/vortrag.html
@@ -271,13 +271,68 @@
 						<h2>Offene Daten in Chemnitz?!</h2>
 					</section>
 					<section>
-						<p>beschreibung</p>
+						<ul>
+							<li class="fragment">es gibt veröffentliche Daten</li>
+							<li class="fragment">z.B. Amtsblätter</li>
+							<li class="fragment">verstreut über die Webseite</li>
+							<li class="fragment">schwierig zu finden</li>
+							<li class="fragment">ungünstige Formate (PDF)</li>
+							<li class="fragment">Lizenz?</li>
+							<li class="fragment">Korrektheit?</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Tippfehler</h2>
+					</section>
+					<section>
+						<pre><code>Lage: zwischen Hübschmannstraße unf Kanzlerstraße</code></pre>
+					</section>
+					<section>
+						<pre><code>Straße: Berbisdorfer Straße
+Lage: zwischen Klaffenbacher Weg und Lerchenstraße</code></pre>
+					</section>
+					<section>
+						<img src="images/a.jpg">
+					</section>
+					<section>
+						<img src="images/lerchenweg.png">
+					</section>
+					<section>
+						<h2>Korrektheit</h2>
+					</section>
+					<section>
+						<pre><code>Straße: Annaberger Straße
+Lage: Kreuzung Schulstraße</code></pre>
+						<img class="fragment" src="images/schulstraße.png">
+					</section>
+					<section>
+						<img src="images/schlstraße2.png">
 					</section>
 					<section>
 						<p>Radwege in Chemnitz (Chris Hübsch)</p>
-						<img src="images/Chris-huebsch.png" /><br />
+						<img class="fragment" src="images/Chris-huebsch.png" /><br />
 						<a href="http://www.huebsch-gemacht.de/radwege/gmap/all.php" style="font-size: 15px;">Quelle</a>
 					</section>
+				</section>
+
+				<section>
+					<h2>Die Zukunft</h2>
+
+					<ul>
+						<li class="fragment">Kontakte zu anderen OK Labs (Leipzig, Dresden)</li>
+						<li class="fragment">Gemeinsame Treffen</li>
+						<li class="fragment">Gemeinsames Arbeiten</li>
+						<li class="fragment">Spaß an der Sache</li>
+						<br />
+						<br />
+						<br />
+						<li class="fragment">Schaut euch die Vorträge des OKFestivals an!</li>
+					</ul>
+
+				</section>
+
+				<section>
+					<h2>Vielen Dank für ihre Aufmerksamkeit!</h2>
 				</section>
 
 			</div>
