--- a/vortrag.html
+++ b/vortrag.html
@@ -59,16 +59,12 @@
 					</section>
 					<section>
 						<h3>Tobias Gall</h3>
-							Student, Lab Lead, ...
-
-						<br /><br />
-
+						<p>Student, Lab Lead<br/>Interessiert an kuhlen Projekten</p>
+						<br/><br/>
 						<h3>Morris Jobke</h3>
-							Student &nbsp;&nbsp;&nbsp;
-							Lab Lead &nbsp;&nbsp;&nbsp;
-							Webentwickler (PHP, Python) <br />
+						<p>Student, Lab Lead, Webentwickler (PHP, Python)<br />
 							Open-{Source|Data|...}-Enthusiast
-
+						</p>
 					</section>
 
 				</section>
@@ -234,11 +230,6 @@
 						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
 					</section>
 					<section>
-						<h3>Maifeuer</h3>
-						<img src="images/Maifeuer-Sachsen-Fernsehen.png" /><br />
-						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
-					</section>
-					<section>
 						<img src="images/Feuer.png" />
 					</section>
 					<section>
@@ -246,7 +237,6 @@
 						<iframe src="http://codeforchemnitz.de/Haltestellen/" style="width:100%;height:87%;"></iframe>
 					</section>
 				</section>
-
 				<section>
 					<section>
 						<h2>Coole Projekte in Deutschland</h2>
@@ -314,10 +304,8 @@ Lage: Kreuzung Schulstraße</code></pre>
 						<a href="http://www.huebsch-gemacht.de/radwege/gmap/all.php" style="font-size: 15px;">Quelle</a>
 					</section>
 				</section>
-
 				<section>
 					<h2>Die Zukunft</h2>
-
 					<ul>
 						<li class="fragment">Kontakte zu anderen OK Labs (Leipzig, Dresden)</li>
 						<li class="fragment">Gemeinsame Treffen</li>
@@ -328,13 +316,20 @@ Lage: Kreuzung Schulstraße</code></pre>
 						<br />
 						<li class="fragment">Schaut euch die Vorträge des OKFestivals an!</li>
 					</ul>
-
 				</section>
-
+				<section>
+					<h1>und</h1>
+				</section>
+				<section>
+					<h2>Wir brauchen</h2>
+					<h1>strukturierte</h1>
+					<h1>aktuelle</h1>
+					<h1>lizensierte</h1>
+					<h2>Daten</h2>
+				</section>
 				<section>
 					<h2>Vielen Dank für ihre Aufmerksamkeit!</h2>
 				</section>
-
 			</div>
 		</div>
 
