--- a/vortrag.html
+++ b/vortrag.html
@@ -329,6 +329,10 @@ Lage: Kreuzung Schulstraße</code></pre>
 				</section>
 				<section>
 					<h2>Vielen Dank für ihre Aufmerksamkeit!</h2>
+
+					<h4>codeforchemnitz@lists.okfn.org</h4>
+
+					<h4>codeforchemnitz.de</h4>
 				</section>
 			</div>
 		</div>
