--- a/vortrag.html
+++ b/vortrag.html
@@ -155,13 +155,13 @@
 						<h3>Daten abrufen und parsen (II)</h3>
 
 						<span>seit 10.05.2013</span>
-						<pre><code class="json hljs">{
+						<pre class="fragment"><code class="json hljs">{
 	"since": "2013-05-10",
 	"until": null
 }</code></pre>
 
 						<span>von 10.05.2013 bis 15.06.2013</span>
-						<pre><code class="json hljs">{
+						<pre class="fragment"><code class="json hljs">{
 	"since": "2013-05-10",
 	"until": "2013-06-15"
 }</code></pre>
