--- a/vortrag.html
+++ b/vortrag.html
@@ -171,12 +171,12 @@
 						<h3>Daten abrufen und parsen (III)</h3>
 
 <span>zwischen Lange Straße und Leipziger Straße</span>
-						<pre><code class="json hljs">{
+						<pre class="fragment"><code class="json hljs">{
 	"relation": "between",
 	"streets": ["Lange Straße", "Leipziger Straße"]
 }</code></pre>
 <span>Kreuzung Bornaer Straße/Wittgensdorfer Straße</span>
-						<pre><code class="json hljs">{
+						<pre class="fragment"><code class="json hljs">{
 	"relation": "intersection",
 	"streets": ["Bornaer Straße", "Wittgensdorfer Straße"]
 }</code></pre>
