--- a/vortrag.html
+++ b/vortrag.html
@@ -26,15 +26,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<img class="logo" src="images/CFG_logo.svg">
-					<p>
-						<small class="ok-orange">CODE A DIFFERENCE: Nutz' deine Fähigkeiten, um deine Stadt zu verbessern!</small>
-					</p>
-				</section>
-
-				<section data-transition="none" id="code-for-chemnitz">
-					<img class="logo" src="images/CFG_logo.svg">
-					<span id="stamp"></span>
+					<img class="logo" src="images/CFG_Chemnitz.svg">
 					<p>
 						<small class="ok-orange">CODE A DIFFERENCE: Nutz' deine Fähigkeiten, um deine Stadt zu verbessern!</small>
 					</p>
@@ -62,9 +54,12 @@
 						<p>Student, Lab Lead, Webentwickler (PHP, Python)<br />
 							Open-{Source|Data|...}-Enthusiast
 						</p>
-						<br/><br/>
+						<br/>
 						<h3>Tobias Gall</h3>
 						<p>Student, Lab Lead<br/>Interessiert an kuhlen Projekten</p>
+						<br/>
+						<h3>Ronny Hartenstein</h3>
+						<p>....<br/>...</p>
 					</section>
 
 				</section>
@@ -108,17 +103,18 @@
 					</section>
 				</section>
 				<section>
-					<img src="images/karte.png" />
+					<img src="images/karte2.png" style="height: 100%; margin-top: -103px;" />
 				</section>
 				<section>
 					<section>
 						<h2>Das OK-Lab Chemnitz</h2>
 					</section>
 					<section class="left">
-						<h3>Entstehung</h3>
+						<h3>Geschichte</h3>
 						<p>/ 22. Februar 2014 - Open Data Day</p>
 						<p>/ März - Aufruf zur Gründung von Labs von OKFN</p>
-						<p>/ Regelmäßige Treffen (1 - 2 mal im Monat)</p>
+						<p>/ Dezember - Assembly auf dem 31C3 mit anderen Labs</p>
+						<p>/ Regelmäßige Treffen (jeden zweiten Montag)</p>
 					</section>
 					<section class="left">
 						<h3>Unsere Ziele</h3>
@@ -237,6 +233,11 @@
 						<iframe src="http://codeforchemnitz.de/Haltestellen/" style="width:100%;height:87%;"></iframe>
 					</section>
 				</section>
+
+				<section>
+					<section><h3>Es muss nicht immer so schwer sein - CartoDB - Ronny TODO</h3></section>
+				</section>
+
 				<section>
 					<section>
 						<h2>Coole Projekte in Deutschland</h2>
@@ -254,6 +255,10 @@
 						<p>Historische Entwicklung Berlins</p>
 						<iframe src="http://berlin.codefor.de/entwicklung/" style="width:100%;height:87%;"></iframe>
 					</section>
+					<section>
+						<h2>Redeployment</h2>
+						<img src="images/Wasser.png" /><br />
+					</section>
 				</section>
 
 				<section>
@@ -270,6 +275,9 @@
 							<li class="fragment">Lizenz?</li>
 							<li class="fragment">Korrektheit?</li>
 						</ul>
+					</section>
+					<section>
+						<h3>\o/</h3><h3> Wir wurden von einem Stadtrat nach unseren Wünschen gefragt </h3><h3>\o/</h3>
 					</section>
 					<section>
 						<h2>Tippfehler</h2>
@@ -311,10 +319,6 @@ Lage: Kreuzung Schulstraße</code></pre>
 						<li class="fragment">Gemeinsame Treffen</li>
 						<li class="fragment">Gemeinsames Arbeiten</li>
 						<li class="fragment">Spaß an der Sache</li>
-						<br />
-						<br />
-						<br />
-						<li class="fragment">Schaut euch die Vorträge des OKFestivals an!</li>
 					</ul>
 				</section>
 				<section>
@@ -328,10 +332,11 @@ Lage: Kreuzung Schulstraße</code></pre>
 					<h2>Daten</h2>
 				</section>
 				<section>
-					<h2>Vielen Dank für ihre Aufmerksamkeit!</h2>
+					<h3>Vielen Dank für ihre Aufmerksamkeit!</h3><br />
+
+					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> 19. März 2015 <span style="font-weight:normal">im</span> Chaos Treff Chemnitz</h4><br />
 
 					<h4>codeforchemnitz@lists.okfn.org</h4>
-
 					<h4>codeforchemnitz.de</h4>
 				</section>
 			</div>
