--- a/vortrag.html
+++ b/vortrag.html
@@ -114,7 +114,7 @@
 						<p>/ 22. Februar 2014 - Open Data Day</p>
 						<p>/ März - Aufruf zur Gründung von Labs von OKFN</p>
 						<p>/ Dezember - Assembly auf dem 31C3 mit anderen Labs</p>
-						<p>/ Regelmäßige Treffen (jeden zweiten Montag)</p>
+						<p>/ Regelmäßige Treffen (jeden zweiten Donnerstag)</p>
 					</section>
 					<section class="left">
 						<h3>Unsere Ziele</h3>
