--- a/vortrag.html
+++ b/vortrag.html
@@ -131,7 +131,7 @@
 					</section>
 					<section>
 						<h3>Baustellenkarte</h3>
-						<iframe src="http://codeforchemnitz.de/BaustellenChemnitz/#/expanded=true" style="width:100%;height:87%;"></iframe>
+						<p>TODO</p>
 					</section>
 					<section>
 						<img src="images/Uebersicht-Baustellen.png" />
@@ -228,10 +228,6 @@
 					<section>
 						<img src="images/Feuer.png" />
 					</section>
-					<section>
-						<h3>CVAG-Haltestellen</h3>
-						<iframe src="http://codeforchemnitz.de/Haltestellen/" style="width:100%;height:87%;"></iframe>
-					</section>
 				</section>
 
 				<section>
@@ -244,16 +240,24 @@
 						<a href="http://codefor.de/projekte/">codefor.de/projekte</a>
 					</section>
 					<section>
-						<p>Things on Bikelines</p>
-						<iframe src="http://thingsonbikelanes.tumblr.com/" style="width:100%;height:87%;"></iframe>
+						<p>Bürger baut Stadt</p>
+						<img src="images/buergerbautstadt.png" />
 					</section>
 					<section>
-						<p>Barrierefreiheit im ÖPNV (Hamburg)</p>
-						<iframe src="https://dl.dropboxusercontent.com/u/54512470/Accessibility_VIZ/hamburg.html" style="width:100%;height:87%;"></iframe>
+						<p>Parkplätze Dresden</p>
+						<img src="images/parkhaeuser.PNG" />
+					</section>
+					<section>
+						<p>Things on Bikelines</p>
+						<img src="images/things.png" />
+					</section>
+					<section>
+						<p>Barrierefreiheit im ÖPNV</p>
+						<img src="images/access.png" />
 					</section>
 					<section>
 						<p>Historische Entwicklung Berlins</p>
-						<iframe src="http://berlin.codefor.de/entwicklung/" style="width:100%;height:87%;"></iframe>
+						<img src="images/entwicklung-berlin.png" />
 					</section>
 					<section>
 						<h2>Redeployment</h2>
@@ -290,10 +294,10 @@
 Lage: zwischen Klaffenbacher Weg und Lerchenstraße</code></pre>
 					</section>
 					<section>
-						<img src="images/a.jpg">
+						<img src="images/a.jpg" style="height: 100%; margin-top: -70px;">
 					</section>
 					<section>
-						<img src="images/lerchenweg.png">
+						<img src="images/lerchenweg.png" style="height: 100%; margin-top: -70px;">
 					</section>
 					<section>
 						<h2>Korrektheit</h2>
@@ -334,7 +338,7 @@ Lage: Kreuzung Schulstraße</code></pre>
 				<section>
 					<h3>Vielen Dank für ihre Aufmerksamkeit!</h3><br />
 
-					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> 19. März 2015 <span style="font-weight:normal">im</span> Chaos Treff Chemnitz</h4><br />
+					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> Open Data Workshop <span style="font-weight:normal">zu den</span> Chemnitzer Linux Tagen</h4><br />
 
 					<h4>codeforchemnitz@lists.okfn.org</h4>
 					<h4>codeforchemnitz.de</h4>
