--- a/vortrag.html
+++ b/vortrag.html
@@ -224,7 +224,53 @@
 					<section>
 						<img src="images/kreuz.png">
 					</section>
-					<section>
+
+
+                    <section>
+                        <h3>Trinkwasser</h3>
+                        <p><img src="images/trinkwasser.jpg" height="70%"></p>
+                        <p><a href="http://codeforchemnitz.de/trinkwasser/" target="_blank">codeforchemnitz.de/trinkwasser/</a></p>
+                        <p><a href="http://www.eins.de/ueber-eins/netze/trinkwasser/" target="_blank" style="font-size: 15px;">Quelle: eins</a></p>
+                    </section>
+                    <section>
+                        <h3>Spannend weil:</h3>
+                        <ul>
+                            <li>grafisch hübsch aufbereitet</li>
+                            <li>Erklärungen zu Bestandteilen</li>
+                            <li>Vergleich mit Mineralwässern</li>
+                            <li>Erklärt Wasserhärte (unspannend)</li>
+                            <li>funktioniert auch auf Smartphone</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <p>Aber: es fehlen Daten :(</p>
+                        <p>Datensätze je Hochbehälter wären klasse!</p>
+                    </section>
+
+                    <section>
+                        <h3>Visualisierung von Geodaten <!--img src="images/cartodb-logo.png"--></h3>
+                        <img src="images/cartodb-baustellen.png" height="70%">
+                        <p><b>Baustellen!</b> <a href="https://rhflow.cartodb.com/viz/d35ff27a-7ce3-11e4-965d-0e9d821ea90d/public_map" target="_blank" style="font-size: 15px;">cartodb.com/../baustellen</a></p>
+                    </section>
+                    <section>
+                        <h3>Städtische Leuchten in Rostock</h3>
+                        <img src="images/cartodb-leuchten-rostock.png" height="70%">
+                        <p><a href="https://rhflow.cartodb.com/viz/05354958-c69a-11e4-be23-0e9d821ea90d/public_map" target="_blank" style="font-size: 15px;">cartodb.com/../leuchten</a></p>
+                    </section>
+                    <section>
+                        <h3>Quelldaten: OpenData.HRO (CKAN v1.8)</h3>
+                        <img src="images/opendata-rostock-leuchten-okfn.png" height="70%">
+                        <p><a href="http://www.opendata-hro.de/dataset/leuchten" target="_blank" style="font-size: 15px;">Quelle: opendata-hro.de/dataset/leuchten</a></p>
+                        <p style="font-size: 0.6em;">basiert auf <a href="http://ckan.org/">CKAN</a>: <i>the world’s leading open-source data portal platform</i></p>
+                    </section>
+                    <section>
+                        <h3>opendata-chemnitz.de</h3>
+                        <h3>basierend auf CKAN</h3>
+                        <p><img src="images/FTW.png"></p>
+                        <p style="font-size: 0.8em;">abwarten ...</p>
+                    </section>
+
+                    <section>
 						<h3>Maifeuer</h3>
 						<img src="images/Maifeuer-Sachsen-Fernsehen.png" /><br />
 						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
