reorder and try to fix positioning

--- a/vortrag.html
+++ b/vortrag.html
@@ -221,8 +221,17 @@
 						<img src="images/kreuz.png">
 					</section>
 
-
                     <section>
+						<h3>Maifeuer</h3>
+						<img src="images/Maifeuer-Sachsen-Fernsehen.png" /><br />
+						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
+					</section>
+					<section>
+						<img src="images/Feuer.png" />
+					</section>
+
+
+                    <section style="margin-top:-70px">
                         <h3>Trinkwasser</h3>
                         <p><img src="images/trinkwasser.jpg" height="70%"></p>
                         <p><a href="http://codeforchemnitz.de/trinkwasser/" target="_blank">codeforchemnitz.de/trinkwasser/</a></p>
@@ -243,41 +252,28 @@
                         <p>Datensätze je Hochbehälter wären klasse!</p>
                     </section>
 
-                    <section>
+                    <section style="margin-top:-70px">
                         <h3>Visualisierung von Geodaten <!--img src="images/cartodb-logo.png"--></h3>
                         <img src="images/cartodb-baustellen.png" height="70%">
                         <p><b>Baustellen!</b> <a href="https://rhflow.cartodb.com/viz/d35ff27a-7ce3-11e4-965d-0e9d821ea90d/public_map" target="_blank" style="font-size: 15px;">cartodb.com/../baustellen</a></p>
                     </section>
-                    <section>
+                    <section style="margin-top:-70px">
                         <h3>Städtische Leuchten in Rostock</h3>
                         <img src="images/cartodb-leuchten-rostock.png" height="70%">
                         <p><a href="https://rhflow.cartodb.com/viz/05354958-c69a-11e4-be23-0e9d821ea90d/public_map" target="_blank" style="font-size: 15px;">cartodb.com/../leuchten</a></p>
                     </section>
-                    <section>
+                    <section style="margin-top:-70px">
                         <h3>Quelldaten: OpenData.HRO (CKAN v1.8)</h3>
                         <img src="images/opendata-rostock-leuchten-okfn.png" height="70%">
                         <p><a href="http://www.opendata-hro.de/dataset/leuchten" target="_blank" style="font-size: 15px;">Quelle: opendata-hro.de/dataset/leuchten</a></p>
                         <p style="font-size: 0.6em;">basiert auf <a href="http://ckan.org/">CKAN</a>: <i>the world’s leading open-source data portal platform</i></p>
                     </section>
-                    <section>
+                    <section style="margin-top:-70px">
                         <h3>opendata-chemnitz.de</h3>
                         <h3>basierend auf CKAN</h3>
                         <p><img src="images/FTW.png"></p>
                         <p style="font-size: 0.8em;">abwarten ...</p>
                     </section>
-
-                    <section>
-						<h3>Maifeuer</h3>
-						<img src="images/Maifeuer-Sachsen-Fernsehen.png" /><br />
-						<a href="http://www.sachsen-fernsehen.de/Aktuell/Chemnitz/Artikel/1353000/Liste-der-stattfindenden-Hexenfeuer-in-Chemnitz-2014/" style="font-size: 15px;">Quelle: Sachsen Fernsehen</a>
-					</section>
-					<section>
-						<img src="images/Feuer.png" />
-					</section>
-				</section>
-
-				<section>
-					<section><h3>Es muss nicht immer so schwer sein - CartoDB - Ronny TODO</h3></section>
 				</section>
 
 				<section>
@@ -384,7 +380,7 @@ Lage: Kreuzung Schulstraße</code></pre>
 				<section>
 					<h3>Vielen Dank für ihre Aufmerksamkeit!</h3><br />
 
-					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> Open Data Workshop <span style="font-weight:normal">zu den</span> Chemnitzer Linux Tagen</h4><br />
+					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> Open Data Workshop <span style="font-weight:normal">zu den<br \></span> Chemnitzer Linux Tagen</h4><br />
 
 					<h4>codeforchemnitz@lists.okfn.org</h4>
 					<h4>codeforchemnitz.de</h4>
