--- a/vortrag.html
+++ b/vortrag.html
@@ -50,16 +50,10 @@
 						<h2>Wer sind wir?</h2>
 					</section>
 					<section>
-						<h3>Morris Jobke</h3>
-						<p>Student, Lab Lead, Webentwickler (PHP, Python)<br />
-							Open-{Source|Data|...}-Enthusiast
-						</p>
+						<h3 style="line-height:1.2em">Tobias Gall, <br \>Ronny Hartenstein &amp; <br \>Morris Jobke</h3><br /><br />
+						<p style="line-height:1.1em">Lab Leads, Webentwickler (PHP, Python)<br />
+							Open-{Source|Data|...}-Enthusiasten<br/>Interessiert an kuhlen Projekten</p>
 						<br/>
-						<h3>Tobias Gall</h3>
-						<p>Student, Lab Lead<br/>Interessiert an kuhlen Projekten</p>
-						<br/>
-						<h3>Ronny Hartenstein</h3>
-						<p>....<br/>...</p>
 					</section>
 
 				</section>
@@ -81,7 +75,7 @@
 						digitale Werkzeuge für Bürger entwickeln.
 						</p>
 						<p> <span class="bold">Partner:</span>
-						Gestartet wird das Programm von der Open
+						Gestartet wurde das Programm von der Open
 						Knowledge Foundation Deutschland in
 						Partnerschaft mit Code for America, Google
 						und aktiven Teams in ganz DE. </p>
@@ -91,7 +85,7 @@
 						<p>Lokale Gruppen in Städten: OK Labs (Open Knowledge Labs)</p>
 						<p>/ <span class="bold">treffen</span> sich regelmäßig um an Anwendungen und Visualisierungen für ihre Stadt zu arbeiten.</p>
 						<p>/ <span class="bold">vernetzen</span> sich deutschlandweit um gemeinsam an Projekten zu arbeiten.</p>
-						<p>/ stellen ihre Projekte bzw. deren Status auf einer gemeinsamen Plattform vor: codefor.de</p>
+						<p>/ stellen ihre Projekte bzw. deren Status auf einer gemeinsamen Plattform vor: <span class="bold">codefor.de</span></p>
 						<p>/ bekommen Hilfe von Experten und Unterstützung bei der Öffentlichkeitsarbeit und bei der Arbeit mit der lokalen Verwaltung.</p>
 					</section>
 					<section class="left">
@@ -128,10 +122,6 @@
 				<section>
 					<section>
 						<h2>Projekte Chemnitz</h2>
-					</section>
-					<section>
-						<h3>Baustellenkarte</h3>
-						<p>TODO</p>
 					</section>
 					<section>
 						<img src="images/Uebersicht-Baustellen.png" />
@@ -324,38 +314,6 @@
 					</section>
 					<section>
 						<h3>\o/</h3><h3> Wir wurden von einem Stadtrat nach unseren Wünschen gefragt </h3><h3>\o/</h3>
-					</section>
-					<section>
-						<h2>Tippfehler</h2>
-					</section>
-					<section>
-						<pre><code>Lage: zwischen Hübschmannstraße unf Kanzlerstraße</code></pre>
-					</section>
-					<section>
-						<pre><code>Straße: Berbisdorfer Straße
-Lage: zwischen Klaffenbacher Weg und Lerchenstraße</code></pre>
-					</section>
-					<section>
-						<img src="images/a.jpg" style="height: 100%; margin-top: -70px;">
-					</section>
-					<section>
-						<img src="images/lerchenweg.png" style="height: 100%; margin-top: -70px;">
-					</section>
-					<section>
-						<h2>Korrektheit</h2>
-					</section>
-					<section>
-						<pre><code>Straße: Annaberger Straße
-Lage: Kreuzung Schulstraße</code></pre>
-						<img class="fragment" src="images/schulstraße.png">
-					</section>
-					<section>
-						<img src="images/schlstraße2.png">
-					</section>
-					<section>
-						<p>Radwege in Chemnitz (Chris Hübsch)</p>
-						<img class="fragment" src="images/Chris-huebsch.png" /><br />
-						<a href="http://www.huebsch-gemacht.de/radwege/gmap/all.php" style="font-size: 15px;">Quelle</a>
 					</section>
 				</section>
 				<section>
