--- a/vortrag.html
+++ b/vortrag.html
@@ -300,8 +300,6 @@
 				<section>
 					<section>
 						<h2>Offene Daten in Chemnitz?!</h2>
-					</section>
-					<section>
 						<ul>
 							<li class="fragment">es gibt veröffentliche Daten</li>
 							<li class="fragment">z.B. Amtsblätter</li>
@@ -312,6 +310,13 @@
 							<li class="fragment">Korrektheit?</li>
 						</ul>
 					</section>
+		            <section>
+		                <h2>Probleme!</h2>
+		                <ul>
+		                    <li class="fragment">Welche Daten gibt es?</li>
+		                    <li class="fragment">Welche Daten kann man Anfragen?</li>
+		                </ul>
+		            </section>
 					<section>
 						<h3>\o/</h3><h3> Wir wurden von einem Stadtrat nach unseren Wünschen gefragt </h3><h3>\o/</h3>
 					</section>
