--- a/2014.html
+++ b/2014.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>OK Lab Chemnitz</title>
+		<title>OK Lab Chemnitz 2014</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
