--- a/2016.html
+++ b/2016.html
@@ -125,7 +125,7 @@
 				
 				<section>
 					<h3>Stadtteil-Quiz</h3>
-					<p><img src="images/projekt2016_clickthathood.png" height="70%"></p>
+					<p><img src="images/projekt2016_clickthathood.jpg" height="70%"></p>
 					<p><a href="http://http://click-that-hood.com/chemnitz/" target="_blank">click-that-hood.com/chemnitz/</a></p>
 				</section>
 
