final final final version 3

--- a/2016.html
+++ b/2016.html
@@ -43,23 +43,24 @@
 				</section>-->
 
 				<section data-state="ok-lab-blue">
-					<h2>Wer sind wir?</h2>
+					<h2 style="color: white;">Wer sind wir?</h2>
 				</section>
 				<section>
+									<h3>@codeForChemnitz</h3><br>
 					<h3 style="line-height:1.2em">Morris - Tobias - Philipp<br>Ronny - Stefan - Benedikt</h3>
-					<br /><br />
+					<br />
 					<p style="line-height:1.1em">Webentwickler<br />
 						Open-{Source|Data|...}-Enthusiasten<br/>Allzeitweltverbesserer</p>
 					<br/>
+
 				</section>
 
 				<section data-state="ok-lab-green">
-					<h2>Was ist Code for Germany?</h2>
+					<h2 style="color: white;">Was ist Code for Germany?</h2>
 				</section>
 				<section>
 					<img src="images/2016/codeforgermany.jpg">
-					<a href="https://www.flickr.com/photos/okfde/17060438856/in/album-72157651437807290/" class="copyright-note">© Open Knowledge Foundation Deutschland</a>
-
+					<a href="https://www.flickr.com/photos/okfde/17060438856/in/album-72157651437807290/" class="copyright-note">Open Knowledge Foundation Deutschland</a>
 
 					<aside class="notes">
 						<ul>
@@ -72,71 +73,50 @@
 				</section>
 				<section>
 					<img src="images/2016/agenda.jpg">
-					<a href="https://www.flickr.com/photos/okfde/16879099627/in/album-72157651437807290/" class="copyright-note">© Open Knowledge Foundation Deutschland</a>
-				</section>
-				<section class="left">
-					<p> <span class="bold">Was ist Code for
-					Germany?</span><br /> Ein Netzwerk von
-					Menschen, die sich praktisch mit
-					öffentlichen Daten und Civic Tech
-					beschäftigen. </p>
-					<p> <span class="bold">
-					Die Idee dahinter:</span><br /> Gemeinsam
-					Open Data, Partizipation und staatliche
-					Transparenz vorantreiben und nützliche
-					digitale Werkzeuge für Bürger entwickeln.
-					</p>
-					<p> <span class="bold">Partner:</span>
-					Gestartet wurde das Programm von der Open
-					Knowledge Foundation Deutschland in
-					Partnerschaft mit Code for America, Google
-					und aktiven Teams in ganz DE. </p>
+					<a href="https://www.flickr.com/photos/okfde/16879099627/in/album-72157651437807290/" class="copyright-note">Open Knowledge Foundation Deutschland</a>
+
+					<aside class="notes">
+						<ul>
+							<li>Thema OpenData vorantreiben - Mehr Daten öffnen</li>
+							<li>Sichtbarkeit für spannende lokale Projekte</li>
+							<li>Austausch</li>
+							<li>gemeinsame Plattform</li>
+						</ul>
+					</aside>
 				</section>
 				<section>
-					<h3>Wie?</h3>
-					<p>Lokale Gruppen in Städten: OK Labs (Open Knowledge Labs)</p>
-					<p>/ <span class="bold">treffen</span> sich regelmäßig um an Anwendungen und Visualisierungen für ihre Stadt zu arbeiten.</p>
-					<p>/ <span class="bold">vernetzen</span> sich deutschlandweit um gemeinsam an Projekten zu arbeiten.</p>
-					<p>/ stellen ihre Projekte bzw. deren Status auf einer gemeinsamen Plattform vor: <span class="bold">codefor.de</span></p>
-					<p>/ bekommen Hilfe von Experten und Unterstützung bei der Öffentlichkeitsarbeit und bei der Arbeit mit der lokalen Verwaltung.</p>
-				</section>
-				<section>
-					<h3>Ziele</h3>
-					<p>/ Gemeinsam mehr Werkzeuge für Bürger entwickeln</p>
-					<p>/ Das Thema Open Data vorantreiben – Mehr Daten öffnen!</p>
-					<p>/ Mehr Sichtbarkeit für spannende lokale Projekte</p>
-					<p>/ Austausch auch auf internationaler Ebene</p>
-				</section>
-				<section>
-					<img src="images/karte2016.png" style="height: 100%; margin-top: -103px;" />
+					<img src="images/karte2016.png"/>
 				</section>
 
 
 				<section data-state="ok-lab-blue">
-					<h2>Das OK-Lab Chemnitz</h2>
+					<h2 style="color:white">Das OK-Lab Chemnitz</h2>
 				</section>
 				<section class="left">
 					<h3>Geschichte</h3>
-					<p>/ 22. Februar 2014 - Open Data Day</p>
-					<p>/ März - Aufruf zur Gründung von Labs von OKFN</p>
-					<p>/ Dezember - Assembly auf dem 31C3 mit anderen Labs</p>
-					<p>/ Regelmäßige Treffen (jeden zweiten Donnerstag)</p>
+					<p>/ Frühjahr 2014 Gründung</p>
+					<p>/ Regelmäßige Treffen</p>
+					<p>/ Chaos Communication Camp & Chemnitzer Linux-Tage</p>
+				</section>
+				<section>
+						<img src="images/2016/clt-lagerfeuer.jpg"/>
+						<p>Gesellige Lagerfeuerstimmung bei den <a href="https://twitter.com/hashtag/CLT2016?src=hash">#CLT2016</a></p>
 				</section>
 				<section class="left">
 					<h3>Unsere Ziele</h3>
-					<p>/ Leute finden, die Lust haben mitzumachen</p>
-					<p>/ offene Daten sammeln</p>
+					<p>/ Mitstreiter begeistern</p>
+					<p>/ offene Daten finden</p>
 					<p>/ gemeinsam Projekte umsetzen</p>
-					<p>/ mehr Daten in Chemnitz öffnen</p>
+					<p>/ mehr Daten in Chemnitz öffnen <i>*sigh*</i></p>
 				</section>
 
 
 				<section data-state="ok-lab-green">
-					<h2>Projekte Chemnitz</h2>
+					<h2 style="color:white">Projekte in Chemnitz</h2>
 				</section>
 
 				<section>
-					<h3>Wo-ist-Markt</h3>
+					<h3>Wo ist Markt?</h3>
 					<p><img src="images/projekte2016_woistmarkt.jpg" height="70%"></p>
 					<p><a href="http://wo-ist-markt.de/" target="_blank">wo-ist-markt.de/</a></p>
 				</section>
@@ -154,54 +134,87 @@
 					<p><a href="http://www.eins.de/ueber-eins/netze/trinkwasser/" target="_blank" style="font-size: 15px;">Quelle: eins</a></p>
 				</section>
 
-
-				<section data-state="ok-lab-blue">
-					<h2>Offene Daten in Chemnitz(!)</h2>
-					<ul>
-						<li>es gibt veröffentliche Daten</li>
-						<li>z.B. Amtsblätter</li>
-						<li>verstreut über die Webseite</li>
-						<li>schwierig zu finden</li>
-						<li>ungünstige Formate (PDF)</li>
-						<li>Lizenz unklar</li>
-						<li>Korrektheit?</li>
-					</ul>
+				<section>
+					<h3>Baustellen</h3>
+					<p><img src="images/2016/baustellen.jpg" height="70%"></p>
+					<p><a href="http://codeforchemnitz.de/BaustellenChemnitz/" target="_blank">codeforchemnitz.de/BaustellenChemnitz/</a></p>
+					<p><a href="http://www.chemnitz.de/chemnitz/de/aktuelles/baustellenservice/index.itl" target="_blank" style="font-size: 15px;">Quelle: Stadt Chemnitz</a></p>
 				</section>
-				<section data-state="ok-lab-red">
-					<h2>Probleme!</h2>
-					<ul>
-						<li>Welche Daten gibt es?</li>
-						<li>Welche Daten kann man Anfragen?</li>
-					</ul>
+
+
+				<section data-state="ok-lab-green">
+					<h2 style="color: white;">Offene Daten und Chemnitz</h2>
+				</section>
+				<section>
+						<h3>Offene Daten und Chemnitz?</h3>
+						<img src="images/2016/angie.jpg" height="80%"/>
+						<a href="http://www.reuters.com/search/pictures?blob=merkel+head-mounted&sortBy=&dateRange=" class="copyright-note" style="margin-right: 85px">Reuters</a>
+
+				</section>
+				<section>
+					<div id="wordcloud" style="line-height:1.2">
+  <span class="fragment" data-fragment-index="1" rel="8">schwer zu finden</span>
+  <span class="fragment" data-fragment-index="1" rel="13">Lizenz unklar</span>
+  <span class="fragment red-red-red" data-fragment-index="2" rel="20">Transparenzgesetz</span>
+  <span class="fragment" data-fragment-index="1" rel="10">geschlossene Formate</span>
+  <span class="fragment" data-fragment-index="1" rel="3"></span>
+  <span class="fragment" data-fragment-index="1" rel="7">Excel-Dokumente</span>
+  <span class="fragment red-red-red" data-fragment-index="2" rel="18">veröffentliche Daten</span>
+  <span class="fragment" data-fragment-index="1" rel="10">keine offizielle Schnittstelle</span>
+  <span rel="30">Offene Daten in Chemnitz</span>
+  <span class="fragment" data-fragment-index="1" rel="5"></span>
+  <span class="fragment red-red-red" data-fragment-index="2" rel="14">geplantes Open-Data-Portal</span>
+  <span class="fragment" data-fragment-index="1" rel="7">Datenhoheit</span>
+  <span class="fragment" data-fragment-index="1" rel="12">Pressemitteilung</span>
+  <span class="fragment" data-fragment-index="1" rel="5"></span>
+  <span class="fragment" data-fragment-index="1" rel="25">verstreut</span>
+  <span class="fragment" data-fragment-index="1" rel="10">Korrektheit?</span>
+  <span class="fragment" data-fragment-index="1" rel="3">eins</span>
+  <span class="fragment" data-fragment-index="1" rel="8">chemnitz.de</span>
+</div>
+<script src="/js/jquery-1.10.1.min.js"></script>
+<script src="/js/jquery.tagcloud.js"></script>
+<script>
+$(function() {
+  $.fn.tagcloud.defaults = {
+    size: {start: 15, end: 50, unit: 'pt'},
+    color: {start: '#000000', end: '#000000'}
+  };
+  $(function () {
+    $('#wordcloud span').tagcloud();
+  });
+});
+</script>
 				</section>
 				<section>
 					<h3>\o/</h3><h3> Open-Data-Portal is coming!</h3>
-					<p>technische Basis: ArcGIS</p>
+										<aside class="notes">
+											<ul>
+												<li>technische Basis: ArcGis</li>
+												<li>bereits Verwaltungsmitarbeitern vorgestellt</li>
+												<li>"sah gut aus"</li>
+											</ul>
+										</aside>
 				</section>
 
-				<section data-state="ok-lab-blue">
-					<h2>Die Zukunft</h2>
-					<ul>
-						<li>Gemeinsame regelmäßige Treffen</li>
-						<li>Gemeinsames Arbeiten</li>
-						<li>Gemeinsame Projekte</li>
-						<li>Spaß an der Sache</li>
-					</ul>
-				</section>
 				<section>
-					<h1>und</h1>
-				</section>
-				<section>
-					<h2>Wir brauchen</h2>
-					<h1>strukturierte</h1>
-					<h1>aktuelle</h1>
-					<h1>lizensierte</h1>
-					<h2>Daten</h2>
-				</section>
-				<section>
-					<h3>Vielen Dank für die Aufmerksamkeit!</h3><br />
+					<h3>Die Zukunft</h3>
+					<img src="images/2016/gemeinsam.jpg" height="80%">
+					<a href="https://www.flickr.com/photos/okfde/17060487916/in/album-72157651437807290/" class="copyright-note">Open Knowledge Foundation Deutschland</a>
 
-					<h4 style="font-weight:bold"><span style="font-weight:normal">Kommt vorbei:</span> Open Data Workshop <span style="font-weight:normal">zu den<br \></span> Chemnitzer Linux Tagen</h4><br />
+					<aside class="notes">
+						<ul>
+							<li>Hackathon zum Portal-Start</li>
+							<li>gemeinsame Projekte/li>
+							<li>Spaß an der Sache</li>
+							<li>TU Chemnitz - Projekt "miteinander" - living lab</li>
+						</ul>
+					</aside>
+				</section>
+				<section>
+					<h3>Vielen Dank und kommt mal vorbei!</h3><br />
+
+					<h3>@codeForChemnitz</h3><br>
 
 					<h4>codeforchemnitz@lists.okfn.org</h4>
 					<h4>codeforchemnitz.de</h4>
