--- a/2016.html
+++ b/2016.html
@@ -172,8 +172,8 @@
   <span class="fragment" data-fragment-index="1" rel="3">eins</span>
   <span class="fragment" data-fragment-index="1" rel="8">chemnitz.de</span>
 </div>
-<script src="/js/jquery-1.10.1.min.js"></script>
-<script src="/js/jquery.tagcloud.js"></script>
+<script src="js/jquery-1.10.1.min.js"></script>
+<script src="js/jquery.tagcloud.js"></script>
 <script>
 $(function() {
   $.fn.tagcloud.defaults = {
