fix wrong details ;) - thx @symptog

--- a/2016.html
+++ b/2016.html
@@ -163,7 +163,7 @@
   <span class="fragment" data-fragment-index="1" rel="10">keine offizielle Schnittstelle</span>
   <span rel="30">Offene Daten in Chemnitz</span>
   <span class="fragment" data-fragment-index="1" rel="5"></span>
-  <span class="fragment red-red-red" data-fragment-index="2" rel="14">geplantes Open-Data-Portal</span>
+  <span class="fragment red-red-red" data-fragment-index="2" rel="14">Geoinformationsportal</span>
   <span class="fragment" data-fragment-index="1" rel="7">Datenhoheit</span>
   <span class="fragment" data-fragment-index="1" rel="12">Pressemitteilung</span>
   <span class="fragment" data-fragment-index="1" rel="5"></span>
@@ -187,7 +187,7 @@ $(function() {
 </script>
 				</section>
 				<section>
-					<h3>\o/</h3><h3> Open-Data-Portal is coming!</h3>
+					<h3>\o/</h3><h3> GIS-Portal is coming!</h3>
 										<aside class="notes">
 											<ul>
 												<li>technische Basis: ArcGis</li>
@@ -205,7 +205,7 @@ $(function() {
 					<aside class="notes">
 						<ul>
 							<li>Hackathon zum Portal-Start</li>
-							<li>gemeinsame Projekte/li>
+							<li>gemeinsame Projekte</li>
 							<li>Spaß an der Sache</li>
 							<li>TU Chemnitz - Projekt "miteinander" - living lab</li>
 						</ul>
